Fixed getting IP address for sleep resume monitoring.